--- a/Frontend/vid_player.html
+++ b/Frontend/vid_player.html
@@ -3,12 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HLS/DASH Video Player</title>
+    <!-- Gives the video player better style -->
+    <link href="https://vjs.zencdn.net/8.16.1/video-js.css" rel="stylesheet" />
+    <!-- Source for video.js hosted by it's makers -->
+    <script defer src="https://vjs.zencdn.net/8.16.1/video.min.js"></script>
+
+    <title>HLS Video Player</title>
 </head>
 <body>
-    <video id="videoPlayer" controls width="640" height="360" autoplay></video>
-    <script src="path-to-hls.js"></script>
-    <script src="path-to-dash.all.min.js"></script>
-    <script src="app.js"></script>
+    <video 
+        id="my-video" 
+        class="video-js"
+        controls
+        preload="auto"
+        width="640"
+        height="264"
+        data-setup='{}'>
+        <source src="https://sample.vodobox.net/skate_phantom_flex_4k/skate_phantom_flex_4k.m3u8" type="application/x-mpegURL">
+        <!-- Unsure if we even need a DASH player component, seems most browers already support HLS and I can't figure out the syntax for DASH -->
+        <!--<source src="https://live-hls-abr-cdn.livepush.io/live/bigbuckbunnyclip/index.mpd" type="application/DASH">-->
+      </video>
 </body>
 </html>
